# ROS_ALGOS

Dijkstra_ws/devel/: .catkin  _setup_util.py
Dijkstra_ws/devel/lib/pkgconfig/: kobuki_description.pc  pp_msgs.pc  srv_client_plugin.pc  turtlebot_description.pc  unit2_pp.pc
catkin/src/MYROBOT_control/: CMakeLists.txt  package.xml
catkin/src/MYROBOT_control/launch/: MYROBOT_control.launch
catkin/src/MYROBOT_control/scripts/: motorwrapper.py  velocity_controller.py
catkin/src/learning_tf/: package.xml
catkin/src/learning_tf/launch/: start_demo.launch
catkin/src/learning_tf/nodes/: dynamic_tf_broadcaster.py  fixed_tf_broadcaster.py  turtle_tf_broadcaster.py  turtle_tf_listener.py
catkin/src/robot_setup_tf/: package.xml
catkin/src/tf_tut/: CMakeLists.txt  package.xml
ot_light_ws/src/OT-Light/: CMakeLists.txt  package.xml  transmission_joint.txt
ot_light_ws/src/OT-Light/config/: joint_names_OTEditedwithCam-URDF.yaml
ot_light_ws/src/OT-Light/launch/: gazebo.launch
ot_light_ws/src/OT-Light/meshes/: base_link.STL  crown.STL  fixedset1.STL  fixedset2.STL  gear1.STL  gear2.STL  gear3.STL  gimbal.STL  light.STL  linkconnect.STL  motorholder.STL  pinion.STL  pipe1.STL  pipe2.STL  pipe3.STL  pipe4.STL  pipe5.STL
ot_light_ws/src/OT-Light/scripts/: test.py
ot_light_ws/src/OT-Light/urdf/: OTEditedwithCam-URDF.csv  OTEditedwithCam-URDF.urdf
ot_light_ws/src/OTlights/: CMakeLists.txt  package.xml
ot_light_ws/src/ot_lights/: CMakeLists.txt  package.xml  test.urdf
ot_ws/src/ot2/: CMakeLists.txt  package.xml
ot_ws/src/otf/: CMakeLists.txt  package.xml
(+107 files in other folders)
